Kmom04 Fixed gap in mobile view

--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -192,6 +192,10 @@ body {
         padding: 1em;
     }
 
+    .technology-article {
+        gap: 0 !important;
+    }
+
     .technology-container {
         display: flex !important;
         flex-direction: column;
