--- a/themes/kmom02/scss/style.scss
+++ b/themes/kmom02/scss/style.scss
@@ -158,6 +158,10 @@ body {
         padding: 1em;
     }
 
+    .technology-article {
+        gap: 0 !important;
+    }
+
     .technology-container {
         display: flex !important;
         flex-direction: column;
